--- a/pm-node.css
+++ b/pm-node.css
@@ -1,4 +1,3 @@
-
 /* CSS Attributes used when viewing Project Management nodes */
 
 dt.print_html {
@@ -9,11 +8,15 @@ dt.print_pdf {
   background: transparent url(images/pdf.png) no-repeat top left;
 }
 
-div.pmfields, div.field, div.pmbody {
+div.pmfields,
+div.field,
+div.pmbody {
   width: 70%;
 }
 
-div.pmfields div.label, div.pmbody div.label, div.field div.field-label-inline-first {
+div.pmfields div.label,
+div.pmbody div.label,
+div.field div.field-label-inline-first {
   float: left;
   width: 150px;
   text-align: right;
@@ -22,7 +25,7 @@ div.pmfields div.label, div.pmbody div.label, div.field div.field-label-inline-f
 }
 
 div.pmlinks {
-  float:right;
+  float: right;
   width: 30%;
 }
 
