--- a/pm.css
+++ b/pm.css
@@ -136,3 +136,116 @@ dt#pmconfiguration {
 .view .attachment .pm-icon-add-view {
   float: right;
 }
+
+/**
+ * LIST formatter
+ */
+.pm-list-default-wrapper .pm-icon{
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  float: left;
+}
+
+.pm-icon.pm-list-default-icon-1,
+.pm-icon.pm-list-default-icon-low,
+.pm-icon.pm-list-default-icon-1-low,
+.pm-icon.pm-list-default-icon-open,
+.pm-icon.pm-list-default-icon-green {
+  background: url(icons/priority_1-low.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-2,
+.pm-icon.pm-list-default-icon-normal,
+.pm-icon.pm-list-default-icon-2-normal,
+.pm-icon.pm-list-default-icon-blue {
+  background: url(icons/priority_2-normal.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-3,
+.pm-icon.pm-list-default-icon-high,
+.pm-icon.pm-list-default-icon-3-high,
+.pm-icon.pm-list-default-icon-orange {
+  background: url(icons/priority_3-high.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-4,
+.pm-icon.pm-list-default-icon-urgent,
+.pm-icon.pm-list-default-icon-4-urgent,
+.pm-icon.pm-list-default-icon-overdue,
+.pm-icon.pm-list-default-icon-red {
+  background: url(icons/priority_4-urgent.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-inserted {
+  background: url(icons/status_inserted.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-in_progress {
+  background: url(icons/status_in_progress.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-on_hold {
+  background: url(icons/status_on_hold.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-completed {
+  background: url(icons/status_completed.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-proposal {
+  background: url(icons/status_proposal.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-development {
+  background: url(icons/projectcategory_development.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-support {
+  background: url(icons/projectcategory_support.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-task {
+  background: url(icons/category_task.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-support {
+  background: url(icons/category_support.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-bug {
+  background: url(icons/category_bug.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-feature_request {
+  background: url(icons/category_feature_request.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-tickets {
+  background: url(icons/tickets.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-tasks {
+  background: url(icons/tasks.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-expenses {
+  background: url(icons/expenses.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-notes {
+  background: url(icons/notes.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-projects {
+  background: url(icons/projects.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-report {
+  background: url(icons/report.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-teammembers {
+  background: url(icons/teammembers.png) center center no-repeat;
+}
+
+.pm-icon.pm-list-default-icon-activity {
+  background: url(icons/worktype_activity.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-phase {
+  background: url(icons/worktype_phase.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-project {
+  background: url(icons/worktype_project.png) center center no-repeat;
+}
+.pm-icon.pm-list-default-icon-activity {
+  background: url(icons/worktype_activity.png) center center no-repeat;
+}
