Migrated to fontawesome icons.

--- a/pm.css
+++ b/pm.css
@@ -1,251 +1,15 @@
-table.formgroup {
-  width: auto;
-  margin: 0;
-  clear: both;
-  border: none;
+.pm-status-danger {
+  color: red;
 }
-
-table.formgroup tr td {
-  padding-left: 0px;
-  padding-right: 5px;
-  border: none;
+.pm-status-warning {
+  color: orange;
 }
-
-table.formgroup tr td div.form-item {
-  margin-top: 0px;
-  margin-bottom: 5px;
+.pm-status-success {
+  color: green;
 }
-
-tbody {
-  border: none !important;
+.pm-status-info {
+  color: blue;
 }
-
-th.pm_list_operations {
-  text-align: right;
-  white-space: nowrap;
-  padding: 0.3em 0.5em;
-}
-
-td.pm_list_operations {
-  text-align: right;
-  white-space: nowrap;
-}
-
-div.pm_quick_shortcuts {
-  clear: both;
-}
-
-ul.pm_quick_shortcuts {
-  list-style-type: none;
-  margin: 0;
-}
-
-ul.pm_quick_shortcuts li {
-  background: transparent;
-  background-color: #5294c1;
-  display: inline;
-  float: left;
-  padding: 0;
-  margin: 0 1pt 1pt 0;
-}
-
-ul.pm_quick_shortcuts li a {
-  display: block;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: bold;
-  color: #ffffff;
-}
-
-tr.formgroup {
-  background-color: #ffffff !important;
-  border: none !important;
-}
-
-dl.pmdashboard {
-  overflow: auto;
-}
-
-dt.pmcomponent {
-  padding-left: 40px;
-  padding-top: 10px;
-  height: 40px;
-}
-
-dt.pmcomponent a {
-  font-weight: bold;
-  margin-right: 5px;
-}
-
-dt#pmorganizations {
-  background: transparent url(images/organizations.png) no-repeat top left;
-}
-
-dt#pmprojects {
-  background: transparent url(images/projects.png) no-repeat top left;
-}
-
-dt#pmissues,
-dt#pmtasks {
-  background: transparent url(images/tasks.png) no-repeat top left;
-}
-
-dt#pmtickets {
-  background: transparent url(images/tickets.png) no-repeat top left;
-}
-
-dt#pmpeople {
-  background: transparent url(images/people.png) no-repeat top left;
-}
-
-dt#pmteams {
-  background: transparent url(images/teams.png) no-repeat top left;
-}
-
-dt#pmknowledgebase {
-  background: transparent url(images/knowledgebase.png) no-repeat top left;
-}
-
-dt#pmtimetrackings {
-  background: transparent url(images/timetrackings.png) no-repeat top left;
-}
-
-dt#pmnotes {
-  background: transparent url(images/notes.png) no-repeat top left;
-}
-
-dt#pminvoices {
-  background: transparent url(images/invoices.png) no-repeat top left;
-}
-
-dt#pmexpenses {
-  background: transparent url(images/expenses.png) no-repeat top left;
-}
-
-dt#pmconfiguration {
-  background: transparent url(images/configuration.png) no-repeat top left;
-}
-
-.container-inline .container-inline-date div,
-.container-inline div.container-inline-date,
-.container-inline .container-inline-date input {
-  display: block;
-}
-
-.view .attachment .pm-icon-add-view {
-  float: right;
-}
-
-/**
- * LIST formatter
- */
-.pm-list-default-wrapper .pm-icon{
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  float: left;
-}
-
-.pm-icon.pm-list-default-icon-1,
-.pm-icon.pm-list-default-icon-low,
-.pm-icon.pm-list-default-icon-1-low,
-.pm-icon.pm-list-default-icon-open,
-.pm-icon.pm-list-default-icon-green {
-  background: url(icons/priority_1-low.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-2,
-.pm-icon.pm-list-default-icon-normal,
-.pm-icon.pm-list-default-icon-2-normal,
-.pm-icon.pm-list-default-icon-blue {
-  background: url(icons/priority_2-normal.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-3,
-.pm-icon.pm-list-default-icon-high,
-.pm-icon.pm-list-default-icon-3-high,
-.pm-icon.pm-list-default-icon-orange {
-  background: url(icons/priority_3-high.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-4,
-.pm-icon.pm-list-default-icon-urgent,
-.pm-icon.pm-list-default-icon-4-urgent,
-.pm-icon.pm-list-default-icon-overdue,
-.pm-icon.pm-list-default-icon-red {
-  background: url(icons/priority_4-urgent.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-inserted {
-  background: url(icons/status_inserted.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-in_progress {
-  background: url(icons/status_in_progress.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-on_hold {
-  background: url(icons/status_on_hold.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-completed {
-  background: url(icons/status_completed.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-proposal {
-  background: url(icons/status_proposal.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-development {
-  background: url(icons/projectcategory_development.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-support {
-  background: url(icons/projectcategory_support.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-task {
-  background: url(icons/category_task.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-support {
-  background: url(icons/category_support.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-bug {
-  background: url(icons/category_bug.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-feature_request {
-  background: url(icons/category_feature_request.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-tickets {
-  background: url(icons/tickets.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-tasks {
-  background: url(icons/tasks.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-expenses {
-  background: url(icons/expenses.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-notes {
-  background: url(icons/notes.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-projects {
-  background: url(icons/projects.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-report {
-  background: url(icons/report.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-teammembers {
-  background: url(icons/teammembers.png) center center no-repeat;
-}
-
-.pm-icon.pm-list-default-icon-activity {
-  background: url(icons/worktype_activity.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-phase {
-  background: url(icons/worktype_phase.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-project {
-  background: url(icons/worktype_project.png) center center no-repeat;
-}
-.pm-icon.pm-list-default-icon-activity {
-  background: url(icons/worktype_activity.png) center center no-repeat;
+.pm-status-normal {
+  color: dark-grey;
 }
