Making Dashboard look good.

--- a/pm.css
+++ b/pm.css
@@ -16,7 +16,7 @@
 .pm-status-info-onfocus:active,
 .pm-status-info-onfocus:hover,
 .pm-status-info {
-  color: #2346ff;
+  color: #0071B3;
 }
 .pm-status-normal-onfocus:active,
 .pm-status-normal-onfocus:hover,
