--- a/pm-dashboard.css
+++ b/pm-dashboard.css
@@ -3,10 +3,55 @@
 #pmdashboard {
   width: 100%;
 }
-
 #pmdashboard .pmcomponent {
-  font-size: 2em;
+    display: block;
+    width: 90%;
+    margin: 10px;
+    overflow: hidden;
+    background: #efefef;
+    height: 50px;
+    position: relative;
+    padding: 0 0 0 0;
+    font-size: 20px;
+    line-height: 50px;
 }
+
+#pmdashboard .pmcomponent a {
+    color: #222;
+    text-decoration: none;
+}
+#pmdashboard .pmcomponent a:hover {
+    color: #777;
+    text-decoration: none;
+}
+#pmdashboard .pmcomponent i.fa {
+    border: none;
+    opacity: 0.5;
+    color: black;
+    height: 100%;
+    height: 50px;
+    width: 50px;
+    padding: 0px 5px;
+}
+#pmdashboard .pmcomponent a i.fa.fa-plus {
+    border: none;
+    opacity: 0.2;
+    color: black;
+    background: rgba(0,0,0,0.3);
+    height: 100%;
+    float: right;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#pmdashboard .pmcomponent a i.fa-plus:hover {
+    opacity: 0.5;
+}
+
 
 div.pmdashboard {
   float: left;
@@ -31,6 +76,3 @@ div.pmdashboard {
   display: inline-block;
 }
 
-#header-region #pmdashboard-block .popups-form img {
-  margin-top: 0;
-}
