--- a/pm.css
+++ b/pm.css
@@ -3,21 +3,25 @@
 .pm-status-danger {
   color: #f00;
 }
+
 .pm-status-warning-onfocus:active,
 .pm-status-warning-onfocus:hover,
 .pm-status-warning {
   color: #840;
 }
+
 .pm-status-success-onfocus:active,
 .pm-status-success-onfocus:hover,
 .pm-status-success {
   color: #238800;
 }
+
 .pm-status-info-onfocus:active,
 .pm-status-info-onfocus:hover,
 .pm-status-info {
-  color: #0071B3;
+  color: #0071b3;
 }
+
 .pm-status-normal-onfocus:active,
 .pm-status-normal-onfocus:hover,
 .pm-status-normal {
@@ -31,11 +35,11 @@ span.pm-no-icon {
   margin: 0 2px;
 }
 
-.pm-use-storm-icons i.fa.pm-icon:before{
+.pm-use-storm-icons i.fa.pm-icon:before {
   content: '' !important;
 }
 
-.pm-use-storm-icons i.fa.pm-icon{
+.pm-use-storm-icons i.fa.pm-icon {
   min-width: 16px;
   min-height: 16px;
   display: inline-block;
@@ -44,55 +48,66 @@ span.pm-no-icon {
   background-repeat: no-repeat;
 }
 
-.pm-use-storm-icons i.fa.fa-plus{
+.pm-use-storm-icons i.fa.fa-plus {
   background-image: url(icons/application_add.png);
 }
 
-.pm-use-storm-icons i.fa.fa-edit{
+.pm-use-storm-icons i.fa.fa-edit {
   background-image: url(icons/application_edit.png);
 }
 
-.pm-use-storm-icons i.fa.fa-remove{
+.pm-use-storm-icons i.fa.fa-remove {
   background-image: url(icons/application_delete.png);
 }
-.pm-use-storm-icons i.fa.fa-pause{
+
+.pm-use-storm-icons i.fa.fa-pause {
   background-image: url(icons/status_on_hold.png);
 }
-.pm-use-storm-icons i.fa.fa-play{
+
+.pm-use-storm-icons i.fa.fa-play {
   background-image: url(icons/status_in_progress.png);
 }
-.pm-use-storm-icons i.fa.fa-check{
+
+.pm-use-storm-icons i.fa.fa-check {
   background-image: url(icons/status_completed.png);
 }
 
-.pm-use-storm-icons i.fa.fa-square{
+.pm-use-storm-icons i.fa.fa-square {
   background-image: url(icons/status_inserted.png);
 }
-.pm-use-storm-icons i.fa.fa-flask{
+
+.pm-use-storm-icons i.fa.fa-flask {
   background-image: url(icons/projectcategory_development.png);
 }
-.pm-use-storm-icons i.fa.fa-phone{
+
+.pm-use-storm-icons i.fa.fa-phone {
   background-image: url(icons/category_support.png);
 }
-.pm-use-storm-icons i.fa.fa-bug{
+
+.pm-use-storm-icons i.fa.fa-bug {
   background-image: url(icons/category_bug.png);
 }
-.pm-use-storm-icons i.fa.fa-tasks{
+
+.pm-use-storm-icons i.fa.fa-tasks {
   background-image: url(icons/category_task.png);
 }
-.pm-use-storm-icons i.fa.fa-ticket{
+
+.pm-use-storm-icons i.fa.fa-ticket {
   background-image: url(icons/category_feature_request.png);
 }
-.pm-use-storm-icons i.fa.fa-circle.pm-status-info{
+
+.pm-use-storm-icons i.fa.fa-circle.pm-status-info {
   background-image: url(icons/priority_1-low.png);
 }
-.pm-use-storm-icons i.fa.fa-circle.pm-status-success{
+
+.pm-use-storm-icons i.fa.fa-circle.pm-status-success {
   background-image: url(icons/priority_2-normal.png);
 }
-.pm-use-storm-icons i.fa.fa-circle.pm-status-warning{
+
+.pm-use-storm-icons i.fa.fa-circle.pm-status-warning {
   background-image: url(icons/priority_3-high.png);
 }
-.pm-use-storm-icons i.fa.fa-circle.pm-status-danger{
+
+.pm-use-storm-icons i.fa.fa-circle.pm-status-danger {
   background-image: url(icons/priority_4-urgent.png);
 }
-
