--- a/pm-dashboard.css
+++ b/pm-dashboard.css
@@ -25,7 +25,7 @@
   text-decoration: none;
 }
 
-#pmdashboard .pmcomponent i.fa {
+#pmdashboard .pmcomponent i.fa.pm-icon {
   border: none;
   opacity: 0.5;
   color: black;
@@ -33,6 +33,7 @@
   height: 50px;
   width: 50px;
   padding: 0px 5px;
+  background-size: initial;
 }
 
 #pmdashboard .pmcomponent a i.fa.fa-plus {
